the test report is not generated anymore in the project